--- a/emag/index.html
+++ b/emag/index.html
@@ -9,6 +9,11 @@
     <h1>eMAG</h1>
     <h3>Lista televizoare</h3>
 
+    <p>Note</p>
+    <div id="note">
+
+    </div>
+
     <button onclick="sortAsc(tvs)">Sortare Ascendent Dupa Pret</button>
     <button onclick="sortDesc(tvs)">Sortare Descendent Dupa Pret</button>
     <br/>
