--- a/vremea/index.html
+++ b/vremea/index.html
@@ -7,28 +7,39 @@
 </head>
 
 <body>
-    <input type="text" autofocus id="oras" onkeypress="if(event.keyCode==13) {document.getElementById('btnGetVremeaAsJson').click();}"
-    />
-    <input type="button" id="btnGetVremeaAsJson" onclick="getCurrentWeatherAsJson()" value="Afiseaza vremea" />
-    <input type="button" id="btnGetVremeaAsJson" onclick="getCurrentForecastAsJson()" value="Afiseaza prognoza" />
-    <div id="vremea">
-        <img id="cer_image" src="" />
-        <br/>
-        <span>Descriere: </span><span id="cer_label"></span>
-        <br/>
-        <span>Umiditate: </span><span id="umiditate"></span>
-        <br/>
-        <span>Presiune: </span><span id="presiune"></span>
-        <br/>
-        <span>Temperatura curenta: </span><span id="temperatura_curenta"></span>
-        <br/>
-        <span>Minima zilei: </span><span id="temperatura_min"></span>
-        <br/>
-        <span>Maxima zilei: </span><span id="temperatura_max"></span>
-        <br/>
+    <div id="form_wrapper">
+        <input type="text" autofocus id="oras" onkeypress="if(event.keyCode==13) {document.getElementById('btnGetVremeaAsJson').click();}"
+        />
+        <input type="button" id="btnGetVremeaAsJson" onclick="getCurrentWeatherAsJson()" value="Afiseaza vremea" />
+        <input type="button" id="btnGetVremeaAsJson" onclick="getCurrentForecastAsJson()" value="Afiseaza prognoza" />
+    </div>
+    <div style="clear: both;"></div>
+    <div id="vremea_wrapper">
+        <h3>Vremea acum:</h3>
+        <div id="vremea">
+            <img id="cer_image" src="" />
+            <br/>
+            <span>Descriere: </span><span id="cer_label"></span>
+            <br/>
+            <span>Umiditate: </span><span id="umiditate"></span>
+            <br/>
+            <span>Presiune: </span><span id="presiune"></span>
+            <br/>
+            <span>Temperatura curenta: </span><span id="temperatura_curenta"></span>
+            <br/>
+            <span>Minima zilei: </span><span id="temperatura_min"></span>
+            <br/>
+            <span>Maxima zilei: </span><span id="temperatura_max"></span>
+        </div>
+        <div id="map" style="width:300px;height:200px;"></div>
     </div>
 
-    <div id="map" style="width:300px;height:200px;"></div>
+    <div id="prognoza_wrapper">
+        <h3>Vremea in urmatoarele zile:</h3>
+        <div id="prognoza">
+
+        </div>
+    </div>
 
     <script src="https://maps.googleapis.com/maps/api/js"></script>
 </body>
