--- a/ajax/vremea/index.html
+++ b/ajax/vremea/index.html
@@ -41,7 +41,7 @@
         </div>
     </div>
 
-    <script src="https://maps.googleapis.com/maps/api/js?client=AIzaSyB8AU6q2-J-qXOYaPFZj-yaAkA3tj17TZM&v=3.29"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?libraries=places&key=AIzaSyB8AU6q2-J-qXOYaPFZj-yaAkA3tj17TZM"></script>
 </body>
 
 </html>
