--- a/ajax/vremea/index.html
+++ b/ajax/vremea/index.html
@@ -10,8 +10,10 @@
     <div id="form_wrapper">
         <input type="text" autofocus id="oras" onkeypress="if(event.keyCode==13) {document.getElementById('btnGetVremeaAsJson').click();}"
         />
-        <input type="button" id="btnGetVremeaAsJson" onclick="getCurrentWeatherAsJson()" value="Afiseaza vremea" />
-        <input type="button" id="btnGetVremeaAsJson" onclick="getCurrentForecastAsJson()" value="Afiseaza prognoza" />
+        <input type="button" class="button button-top" id="btnGetVremeaAsJson" onclick="getCurrentWeatherAsJson()" value="Afiseaza vremea"
+        />
+        <input type="button" class="button button-top" id="btnGetVremeaAsJson" onclick="getCurrentForecastAsJson()" value="Afiseaza prognoza"
+        />
     </div>
     <div style="clear: both;"></div>
     <div id="vremea_wrapper">
@@ -33,11 +35,10 @@
         </div>
         <div id="map" style="width:300px;height:200px;"></div>
     </div>
-
+    <br/>
     <div id="prognoza_wrapper">
         <h3>Vremea in urmatoarele zile:</h3>
         <div id="prognoza">
-
         </div>
     </div>
 
