--- a/ajax/vremea/index.html
+++ b/ajax/vremea/index.html
@@ -17,7 +17,8 @@
     </div>
     <div style="clear: both;"></div>
     <div id="vremea_wrapper">
-        <h3>Vremea acum:</h3>
+        <h3>Vremea acum</h3>
+        <hr>
         <div id="vremea">
             <img id="cer_image" src="" />
             <br/>
@@ -33,11 +34,13 @@
             <br/>
             <span>Maxima zilei: </span><span id="temperatura_max"></span>
         </div>
-        <div id="map" style="width:300px;height:200px;"></div>
+        <div id="map" ></div>
+        <div class="clear"></div>
     </div>
-    <br/>
+
     <div id="prognoza_wrapper">
-        <h3>Vremea in urmatoarele zile:</h3>
+        <h3>Vremea in urmatoarele zile</h3>
+        <hr>
         <div id="prognoza">
         </div>
     </div>
