design changes on prognoza

--- a/ajax/vremea/index.html
+++ b/ajax/vremea/index.html
@@ -34,14 +34,16 @@
             <br/>
             <span>Maxima zilei: </span><span id="temperatura_max"></span>
         </div>
-        <div id="map" ></div>
+        <div id="map"></div>
         <div class="clear"></div>
     </div>
 
     <div id="prognoza_wrapper">
         <h3>Vremea in urmatoarele zile</h3>
         <hr>
-        <div id="prognoza">
+        <div class="content-prognoza">
+            <div id="prognoza">
+            </div>
         </div>
     </div>
 
