--- a/ajax/bursa/index.html
+++ b/ajax/bursa/index.html
@@ -5,6 +5,9 @@
         <script src="script.js"></script>
     </head>
     <body>
-        bursa
+        <h3>STOCKS</h3>
+        <div id="stocks_wrapper">
+
+        </div>
     </body>
 </html>
