--- a/ajax/meniu/contact.html
+++ b/ajax/meniu/contact.html
@@ -15,6 +15,23 @@
     <div>
         Adresa: strada foamei, la parter
     </div>
+    <div id="map"></div>
+    <script>
+        function initMap() {
+            var uluru = { lat: -25.363, lng: 131.044 };
+            var map = new google.maps.Map(document.getElementById('map'), {
+                zoom: 4,
+                center: uluru
+            });
+            var marker = new google.maps.Marker({
+                position: uluru,
+                map: map
+            });
+        }
+    </script>
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCcbqdvtHYyoLGsX_HKF4PPDpp_KtIiIec&callback=initMap">
+
+    </script>
 </body>
 
 </html>
