--- a/ajax/meniu/index.html
+++ b/ajax/meniu/index.html
@@ -12,6 +12,10 @@
         <a href="contact.html" style="float: right; margin-right: 10px; margin-top: 15px;" class="btn">Contact</a>
         <span class="clr"></span>
     </div>
+    <div id="search">
+        <input type="text" id="search_ingredient"/>
+        <button onclick="searchIngrediente()">Cauta in ingrediente</button>
+    </div>
     <div id="menu"></div>
     <script>
         getMenuAsJson();        
