--- a/ajax/meniu/contact.html
+++ b/ajax/meniu/contact.html
@@ -7,31 +7,33 @@
 </head>
 
 <body>
-    <div style="height: 60px;">
-        <h1 style="float: left;">Cald si bun</h1>
-        <a href="index.html" style="float: right; margin-right: 10px; margin-top: 15px;" class="btn">Meniu</a>
-        <span class="clr"></span>
-    </div>
-    <div>
-        Adresa: strada foamei, la parter
-    </div>
-    <div id="map"></div>
-    <script>
-        function initMap() {
-            var uluru = { lat: -25.363, lng: 131.044 };
-            var map = new google.maps.Map(document.getElementById('map'), {
-                zoom: 4,
-                center: uluru
-            });
-            var marker = new google.maps.Marker({
-                position: uluru,
-                map: map
-            });
-        }
-    </script>
-    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCcbqdvtHYyoLGsX_HKF4PPDpp_KtIiIec&callback=initMap">
+    <div class="main">
+        <div style="height: 60px;">
+            <h1 style="float: left;">Cald si bun</h1>
+            <a href="index.html" style="float: right; margin-right: 10px; margin-top: 15px;" class="btn">Meniu</a>
+            <span class="clr"></span>
+        </div>
+        <div class="space">
+            Adresa: strada foamei, la parter
+        </div>
+        <div id="map"></div>
+        <script>
+            function initMap() {
+                var uluru = { lat: -25.363, lng: 131.044 };
+                var map = new google.maps.Map(document.getElementById('map'), {
+                    zoom: 4,
+                    center: uluru
+                });
+                var marker = new google.maps.Marker({
+                    position: uluru,
+                    map: map
+                });
+            }
+        </script>
+        <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCcbqdvtHYyoLGsX_HKF4PPDpp_KtIiIec&callback=initMap">
 
-    </script>
+        </script>
+    </div>
 </body>
 
 </html>
