--- a/ajax/meniu/details.html
+++ b/ajax/meniu/details.html
@@ -7,16 +7,18 @@
 </head>
 
 <body>
-    <div style="height: 60px;">
-        <h1 style="float: left;">Cald si bun</h1>
-        <a href="index.html" style="float: right; margin-right: 10px; margin-top: 15px;" class="btn">Meniu</a>
-        <a href="contact.html" style="float: right; margin-right: 10px; margin-top: 15px;" class="btn">Contact</a>
-        <span class="clr"></span>
+    <div class="main">
+        <div style="height: 60px;">
+            <h1 style="float: left;">Cald si bun</h1>
+            <a href="index.html" style="float: right; margin-right: 10px; margin-top: 15px;" class="btn">Meniu</a>
+            <a href="contact.html" style="float: right; margin-right: 10px; margin-top: 15px;" class="btn-contact">Contact</a>
+            <span class="clr"></span>
+        </div>
+        <div id="menu_item"></div>
+        <script>
+            getMenuItemAsJson();
+        </script>
     </div>
-    <div id="menu_item"></div>
-    <script>
-        getMenuItemAsJson();        
-    </script>
 </body>
 
 </html>
