--- a/ajax/meniu/index.html
+++ b/ajax/meniu/index.html
@@ -7,19 +7,21 @@
 </head>
 
 <body>
+    <div class="main">
     <div style="height: 60px;">
         <h1 style="float: left;">Cald si bun</h1>
-        <a href="contact.html" style="float: right; margin-right: 10px; margin-top: 15px;" class="btn">Contact</a>
+        <a href="contact.html" style="float: right; margin-right: 10px; margin-top: 15px;" class="btn-contact">Contact</a>
         <span class="clr"></span>
     </div>
     <div id="search">
         <input type="text" id="search_ingredient"/>
-        <button onclick="searchIngrediente()">Cauta in ingrediente</button>
+        <button onclick="searchIngrediente()" class="btn-cauta">Cauta in ingrediente</button>
     </div>
     <div id="menu"></div>
     <script>
         getMenuAsJson();        
     </script>
+    </div>
 </body>
 
 </html>
