--- a/ajax/meniu/index.html
+++ b/ajax/meniu/index.html
@@ -14,8 +14,8 @@
         <span class="clr"></span>
     </div>
     <div id="search">
-        <input type="text" id="search_ingredient"/>
-        <button onclick="searchIngrediente()" class="btn-cauta">Cauta in ingrediente</button>
+        <input type="text" id="search_ingredient" onkeypress="if(event.keyCode==13) {document.getElementById('btnSearchInIngrediente').click();}"/>
+        <button id="btnSearchInIngrediente" onclick="searchIngrediente()" class="btn-cauta">Cauta in ingrediente</button>
     </div>
     <div id="menu"></div>
     <script>
