small changes to talcioc

--- a/ajax/talcioc/cart.html
+++ b/ajax/talcioc/cart.html
@@ -44,7 +44,7 @@
                         <th style="width: 60%">Nume</th>
                         <th style="width: 1%">Pret</th>
                         <th style="width: 18%" class="cCantiate">Cantitate</th>
-                        <th style="width: 1%">SubTotal</th>
+                        <th style="width: 1%" class="desktopOnly">SubTotal</th>
                         <th style="width: 10%"></th>
                     </tr>
                 </thead>
