--- a/ajax/meniu/admin.html
+++ b/ajax/meniu/admin.html
@@ -14,14 +14,17 @@
 <body>
     <div class="main">
         <div style="height: 60px;">
-            <h1 style="float: left;">Cald si bun</h1>
-            <a href="index.html" style="float: right; margin-right: 10px; margin-top: 15px;" class="btn">Meniu</a>
-            <a href="contact.html" style="float: right; margin-right: 10px; margin-top: 15px;" class="btn-contact">Contact</a>
+            <a href="./admin.html">
+                <h1 style="float: left;">Cald si bun (Admin)</h1>
+            </a>
+            <a href="./add.html" class="addPreparat btn-contact">Adauga reteta noua</a>
             <span class="clr"></span>
         </div>
-        <div id="menu_item"></div>
+        <div id="retete">
+            <img class="loading" src="./img/loading.gif" />
+        </div>
         <script>
-            getMenuItemAsJson(displayMenuItem);
+            getMenuAsJson(displayMenuForAdmin);        
         </script>
     </div>
 </body>
