--- a/ajax/meniu/contact.html
+++ b/ajax/meniu/contact.html
@@ -2,6 +2,11 @@
 <html>
 
 <head>
+
+    <!-- Mobile Specific Metas
+    –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <link rel="stylesheet" href="style.css"></link>
     <script src="script.js"></script>
 </head>
