--- a/ajax/meniu/delete.html
+++ b/ajax/meniu/delete.html
@@ -14,14 +14,19 @@
 <body>
     <div class="main">
         <div style="height: 60px;">
-            <h1 style="float: left;">Cald si bun</h1>
-            <a href="index.html" style="float: right; margin-right: 10px; margin-top: 15px;" class="btn">Meniu</a>
-            <a href="contact.html" style="float: right; margin-right: 10px; margin-top: 15px;" class="btn-contact">Contact</a>
+            <a href="./admin.html">
+                <h1 style="float: left;">Cald si bun (Admin)</h1>
+            </a>
             <span class="clr"></span>
         </div>
-        <div id="menu_item"></div>
+        <div id="menu_item">
+            <h2>Esti pe cale sa stergi preparatul: "<span id="numePreparat"></span>"</h2>
+            <h2>Confirmi stergerea ?</h2>
+            <button class="btn" onclick="stergePreparat(redirectToAdmin);">Da</button>
+            <button class="btn-blue" onclick="redirectToAdmin();">Nu</button>
+        </div>
         <script>
-            getMenuItemAsJson(displayMenuItem);
+            getMenuItemAsJson(displayDeleteItem);
         </script>
     </div>
 </body>
